Added projection and JPQL in repositories